--- a/BaksMachineWebApp/web/index.xhtml
+++ b/BaksMachineWebApp/web/index.xhtml
@@ -4,8 +4,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
+<h:body>
+    <h:form>
+        <table>
+            <tr>
+                <td><h:outputLabel for="id" value="Id : "/></td>
+                <td><p:inputText id="id" value="#{userMB.id}">
+                    <f:converter converterId="javax.faces.Integer"/>
+                    <p:ajax event="blur" update="idMsg"/>
+                </p:inputText>
+                    <p:message id="idMsg" for="id" display="icon"/>
+                </td>
+            </tr>
+            <tr>
+                <td><h:outputLabel for="name" value="Name : "/></td>
+                <td><p:inputText id="name" value="#{userMB.user.name}">
+                    <f:validateLength minimum="5"/>
+                    <p:ajax event="blur" update="nameMsg"/>
+                    p:inputText>
+                    <p:message id="nameMsg" for="name" display="icon"/>
+                </td>
+            </tr>
+            <tr>
+                <td><h:outputLabel for="surname" value="Surname : "/></td>
+                <td><p:inputText id="surname" value="#{userMB.user.surname}">
+                    <f:validateLength minimum="5"/>
+                    <p:ajax event="blur" update="surnameMsg"/>
+                </p:inputText>
+                    <p:message id="surnameMsg" for="surname" display="icon"/>
+                </td>
+            </tr>
+            <tr>
+                <td><p:commandButton id="addUser" value="Add" action="#{userMB.addCustomer}" ajax="false"/></td>
+                <td><p:commandButton id="reset" value="Delete" action="#{userMB.deleteUser}" ajax="false"/></td>
+            </tr>
+        </table>
+    </h:form>
+</h:body>
 </html>
