--- a/BaksMachineWebApp/web/index.xhtml
+++ b/BaksMachineWebApp/web/index.xhtml
@@ -3,16 +3,17 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
+
+<h:head><title>Welcome to Java Beat  for seeing PrimeFaces_Spring_Hibernate_Project</title></h:head>
 
 <h:body>
     <h:form>
         <table>
             <tr>
                 <td><h:outputLabel for="id" value="Id : "/></td>
-                <td><p:inputText id="id" value="#{userMB.id}">
+                <td><p:inputText id="id" value="#{userMB.user.id}">
                     <f:converter converterId="javax.faces.Integer"/>
                     <p:ajax event="blur" update="idMsg"/>
                 </p:inputText>
@@ -21,9 +22,7 @@
             </tr>
             <tr>
                 <td><h:outputLabel for="name" value="Name : "/></td>
-                <td><p:inputText id="name" value="#{userMB.user.name}">
-                    <f:validateLength minimum="5"/>
-                    <p:ajax event="blur" update="nameMsg"/>
+                <td><p:inputText id="name" value="#{userMB.user.name}"/>
                     p:inputText>
                     <p:message id="nameMsg" for="name" display="icon"/>
                 </td>
@@ -31,8 +30,6 @@
             <tr>
                 <td><h:outputLabel for="surname" value="Surname : "/></td>
                 <td><p:inputText id="surname" value="#{userMB.user.surname}">
-                    <f:validateLength minimum="5"/>
-                    <p:ajax event="blur" update="surnameMsg"/>
                 </p:inputText>
                     <p:message id="surnameMsg" for="surname" display="icon"/>
                 </td>
