--- a/BaksMachineWebApp/web/index.xhtml
+++ b/BaksMachineWebApp/web/index.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-<h:head><title>Welcome to Java Beat  for seeing PrimeFaces_Spring_Hibernate_Project</title></h:head>
+<h:head><title>Baks Machine</title></h:head>
 
 <h:body>
     <h:form>
@@ -23,7 +23,6 @@
             <tr>
                 <td><h:outputLabel for="name" value="Name : "/></td>
                 <td><p:inputText id="name" value="#{userMB.user.name}"/>
-                    p:inputText>
                     <p:message id="nameMsg" for="name" display="icon"/>
                 </td>
             </tr>
